chore: remove html comments from group name

--- a/cliff.toml
+++ b/cliff.toml
@@ -22,7 +22,7 @@ body = """
     {% endif %}\
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | upper_first }}
+    ### {{ group | striptags | trim | upper_first }}
     {% for commit in commits %}
         - {{ commit.message | split(pat="\n") | first | upper_first | trim }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))\
           {% for footer in commit.footers -%}
