--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "source": "_build/js/src/index.ts",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack --watch"
+    "dev": "webpack --watch",
+    "lint": "eslint"
+  },
+  "engines": {
+    "node": "22"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   }
