--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mod-ai",
   "source": "_build/js/src/index.ts",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack --watch",
+    "build": "esbuild _build/js/src/index.ts --bundle --outfile=assets/components/modai/js/modai.js --platform=browser --format=iife --global-name=ModAI --minify",
+    "dev": "esbuild _build/js/src/index.ts --bundle --outfile=assets/components/modai/js/modai.js --platform=browser --format=iife --global-name=ModAI --watch --sourcemap=inline",
     "lint": "eslint"
   },
   "engines": {
@@ -11,16 +11,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "esbuild": "^0.25.1",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
-  },
-  "dependencies": {
+    "typescript-eslint": "^8.26.1"
   }
 }
