--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "allowJs": true,
     "checkJs": false,
     "skipLibCheck": true,
-    "lib": ["dom", "es2015"],
-    "types": ["node"]
+    "lib": ["dom", "es2016"]
   },
   "include": [
     "_build/js/src/**/*"
